--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  max-width: 500px;
+  margin: 0 auto;
+  margin-top: 150px;
 }
 
 .App-logo {
@@ -30,4 +33,13 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.newFriend{
+  height: 40px;
+  width: 40px;
+  border-radius: 100px;
+  font-size: 30px;
+  text-align: center;
 }
