added ui changes and implemented a edit button

--- a/friends/src/components/friends.css
+++ b/friends/src/components/friends.css
@@ -1,11 +1,11 @@
 .friend{ 
     display: flex;
     flex-direction: row; 
-    justify-content: space-between;
-    padding: 10px 40px;
+    padding: 20px 10px;
     max-width: 1000px;
     margin-bottom: 10px;
-    border-bottom: 1px solid grey;
+    box-shadow: 0px 0px 20px rgb(240, 240, 240);
+    border-radius: 10px;
     
 }
 
@@ -16,22 +16,36 @@
 
 .id{
     text-align: left;
+    width: 10%;
 }
 
 .name{
     text-align: left;
+    width: 30%;
 }
 
 .email{
     text-align: left;
+    width: 40%;
     color: red;
 }
 
 .age{
-    text-align: left;
+    text-align: right;
+    width: 10%;
 
 }
 
 form{
     margin-top: 30px;
+}
+
+.edit {
+    height: 20px;
+    width: auto;
+
+}
+
+.editIcon{
+    width: 10%;
 }
