--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
   max-width: 500px;
   margin: 0 auto;
-  margin-top: 150px;
+  margin-top: 50px;
 }
 
 .App-logo {
@@ -35,11 +35,27 @@
   }
 }
 
+.header{
+  display: flex;
+  flex-direction: row; 
+  justify-content: space-between; 
+  align-items: center;
+  margin-bottom: 20px;
+}
 
+.heading{
+  font-size: 20px;
+  font-weight: bold;
+}
 .newFriend{
   height: 40px;
   width: 40px;
   border-radius: 100px;
-  font-size: 30px;
+  font-size: 25px;
+  padding-right: 6px;
+  font-weight: bold;
   text-align: center;
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);  border: none;
+  box-shadow: 0px 0px 5px rgb(197, 197, 197);
+  color: white;
 }
